test/syntax/invalid/nullish-mixing.ts
// expect: VZG2001
let value = left ?? middle || right;
